Fixed zed settings (openai, auto-formatting, and etc)

--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -9,19 +9,18 @@
 {
   "base_keymap": "JetBrains",
   "agent": {
-    "inline_assistant_model": {
-      "provider": "zed.dev",
-      "model": "claude-sonnet-4-latest"
-    },
-    "model_parameters": [],
     "default_model": {
-      "provider": "zed.dev",
-      "model": "claude-sonnet-4-latest"
+      "provider": "openai",
+      "model": "gpt-4o"
     },
+    "play_sound_when_agent_done": false,
+    "model_parameters": [],
+    "always_allow_tool_actions": false,
     "version": "2"
   },
   "vim_mode": true,
-  "ui_font_size": 17,
-  "buffer_font_size": 15,
-  "theme": "Ayu Dark"
+  "ui_font_size": 18,
+  "buffer_font_size": 18,
+  "theme": "One Dark",
+  "format_on_save": "off"
 }
